--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.331.0",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.11",
+    "postgres": "^3.4.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
@@ -26,12 +27,17 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@auth/drizzle-adapter": "^0.7.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.20.14",
+    "drizzle-orm": "^0.29.3",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "install": "^0.13.0",
+    "npm": "^10.4.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
